# meme-annotation-backend

./: .env  main.py  pyproject.toml  requirements.txt  utils.py
ai/: annotator_agent.py  context_search_agent.py
ai/prompts/: meme_overview.md
db/: config.py
routes/annotation/: annotation.py
